--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ body {
 }
 
 .schedule i {
-  color: rgba(255, 255, 255, 0.383);
+  color: #ffffff62;
   width: 100%;
   font-size: 40px;
   margin-top: 12px;
@@ -203,12 +203,60 @@ body {
 }
 /* --Schedule End--- */
 
+/* ---User Feedback Start --- */
+.user-feedback {
+  margin: 60px;
+  padding: 30px 30px;
+}
+.user-feedback h3 {
+  font-weight: bolder;
+  margin-bottom: 30px;
+}
+.user-feedback p {
+  margin-bottom: 10px;
+}
+.user-feedback .row {
+  margin-top: 70px;
+}
+.user-feedback .col-md-4 {
+  padding: 20px 20px;
+}
+.user-feedback .col-md-4 p {
+  background: white;
+  text-align: justify;
+  font-size: 13px;
+  padding: 30px 20px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+}
+.user-feedback .col-md-4 p i,
+span {
+  color: #1e8fffdc;
+  margin-top: 10px;
+  font-size: 1rem;
+  font-weight: bold;
+}
+.user-feedback img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-top: -35px;
+  margin-left: -15px;
+}
+
+@media all and (min-width: 900px) {
+  .user-feedback .col-up {
+    margin-top: -40px;
+  }
+}
+/* ---User Feedback End --- */
+
 /* ---Search Start--- */
-.search {
+/* .search {
   background: rgba(0, 0, 0, 0.863);
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.9);
   padding: 20px 20px;
-  margin-bottom: -155px;
+  margin-bottom: -145px;
 }
 .search h3 {
   color: white;
@@ -231,13 +279,13 @@ body {
   border-radius: 1000px;
 }
 .input-group span {
-  cursor: pointer;
+   */
+/* cursor: pointer;
   border-radius: 1000px;
   background-color: maroon;
   border: none !important;
   color: white;
-  text-align: center;
-}
+} */
 
 /* ---Search End--- */
 
@@ -260,6 +308,9 @@ body {
   width: 50%;
   display: block;
   margin: 0 auto;
+}
+.footer .card p span {
+  font-size: 13px;
 }
 .footer li {
   list-style-type: none;
@@ -289,6 +340,9 @@ body {
   font-size: 13px;
   color: #0057faea;
 }
+.footer .feature li span {
+  font-size: 13px;
+}
 .footer .contact h6 {
   text-align: left;
   color: #095df8;
@@ -298,6 +352,10 @@ body {
 .footer .contact li {
   margin: 16px 0px;
 }
+.footer .contact li span {
+  font-size: 13px;
+  font-weight: none !important;
+}
 .footer .social h6 {
   text-align: left;
   color: #095df8;
@@ -306,6 +364,10 @@ body {
 }
 .footer .social li {
   margin: 16px 0px;
+}
+.footer .social li span {
+  font-size: 13px;
+  font-weight: none !important;
 }
 @media all and (max-width: 600px) {
   .footer .row {
